debug: Temporarily permit all requests and origins for CORS test