@@ -2,7 +2,6 @@ package com.example.easytrade.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -30,19 +29,16 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+            // Apply CORS configuration first
             .cors(Customizer.withDefaults())
+            // Disable CSRF
             .csrf(AbstractHttpConfigurer::disable)
+            // --- RADICAL SIMPLIFICATION FOR DEBUGGING ---
+            // Permit ALL requests to ALL endpoints temporarily
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/api/users/**").permitAll()
-                .requestMatchers("/api/products/**").permitAll()
-                .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
-                .anyRequest().permitAll() // Temporarily permit all requests for debugging CORS
-            )
-            .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .anyRequest().permitAll()
             );
+            // --- END OF SIMPLIFICATION ---
 
         return http.build();
     }
@@ -51,18 +47,14 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",
-                "https://easytrade-ui.vercel.app",
-                "https://easytrade-ui-git-main-ntlhari-ndlovhu-s-projects.vercel.app",
-                "https://easytrade-4mxrzbvf1-ntlhari-ndlovhu-s-projects.vercel.app",
-                "https://easytrade-cosqg2576-ntlhari-ndlovhu-s-projects.vercel.app"
-        ));
+        // Use a wildcard for AllowedOrigins for this test ONLY.
+        // This is insecure for production but will definitively rule out a typo in the domain names.
+        configuration.setAllowedOrigins(List.of("*"));
         
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+        configuration.setAllowedHeaders(Arrays.asList("*")); // Allow all headers for the test
+        // setAllowCredentials(true) is often not allowed with setAllowedOrigins("*"), so we comment it out for this test.
+        // configuration.setAllowCredentials(true); 
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
